--- a/index.html
+++ b/index.html
@@ -4,10 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    
+    <title>Rock Paper Scissors</title>
+    <link rel="stylesheet" href="styles.css" ?>
 </head>
 <body>
+    <div class="flex-container">
+        <h1>Rock Paper Scissors</h1>
+        <button onclick="game()">Start Game</button>
+    </div>
     
 </body>
+<script src="R-P-S.js"></script>
 </html>
