--- a/index.html
+++ b/index.html
@@ -9,11 +9,9 @@
 </head>
 
 <body>
-    <div class="flex-container">
-        <h1>Rock Paper Scissors</h1>
-        <button onclick="game()">Start Game</button>
-    </div>
+    <div id="choices"></div>
+        <h1 id="result"></h1>
     
 </body>
-<script src="R-P-S.js"></script>
+<script src="R-P-S.js" charset="utf-8"></script>
 </html> 
