New Rock Paper Scissors

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 <body>
     <div id="choices"></div>
     <h1 id="result"></h1>
+    <div id="score">
+        <p>Player Score: <span id="player-score">0</span></p>
+        <p>Computer Score: <span id="computer-score">0</span></p>
+    </div>
 
     <script src="R-P-S.js" charset="utf-8"></script>
 </body>
